Feat(*): API 모듈에서 JPA 의존성 삭제 (#90)
* Feat(*): UseCase에서 JPA를 제거

* Test(*): api 모듈의 테스트 수정

* Test(*): domain 모듈의 테스트 수정

* Feat(*): 모든 UseCase에 Transactional annotation 삽입

- 이를 위해 spring-tx 의존성 추가

* Refactor(*): 메소드명이 수정되지 않았던 부분 수정